style.css
:root {
    --lightcolor: #F9FEF9;
    --darkcolor: black;
}


html, body {
    background-image: url("./images/pexels-steve-johnson-1572386.jpg");
    background-color: black;
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-position: 0% 10%;
    height: 100%;
    background-size: cover;
    margin: 0px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
   }

header {
    display: flex;
    flex-direction: column;
    margin: 0px;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.792);
    margin: 0px;
    padding: 0px 205px;
}

h1 {
    color:var(--lightcolor);
    font-size: 30px;
    margin: 5px 0px;
}

.navigation {
    display: flex;
    justify-content: space-between;
    gap: 20px;
    font-weight: 400;
}

nav ul {
    color:var(--lightcolor)
}

nav ul, footer ul {
    list-style: none;
}

nav a {
    color:var(--lightcolor)
}

a:link { 
    text-decoration: none; 
}

nav a:hover {
    color:#b9b7b6;
}

.portfolio {
    display: flex;
    justify-content: center;
    color: black;
    font-size: 112px;
    padding: 20px;
    font-family: cursive;
    text-shadow: 2px 2px white;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    background-color:white;
    margin: 0px 205px;
    padding-left: 10px;
    padding-bottom: 20px;
}

hr {
    border: solid black;
    width: 800px;
}

#bio,
.footer-info {
    display: flex;
    justify-content: center;
    align-self: center;
    padding: 5px 40px 40px 40px;
    margin: 0px 20px;
    gap: 40px;
}

.profile-photo {
    height: 250px;
    width: 250px;
    border-radius: 5%;
    padding: 10px;
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
}

#work {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    justify-content: center;
    align-items: center;
    gap: 30px;
    padding-bottom: 40px;
}

#work p {
    display: inline-flex;
    background-color: rgba(0, 0, 0, 0.822);
    color:white;
    font-weight: bold;
    padding: 10px;
    margin-top: 0px;
    width: 25%;
    height: 20%;
}

#work p:hover {
    background-color: white;
    color: black;
}

.card-1 {
    background-image: 
    linear-gradient(to bottom, rgba(245, 246, 252, 0.132), rgba(0, 0, 0, 0.73)),
    url("./images/color-state.jpg");
    width: 93%;
    height: 320px;
    background-size: cover;
    background-position: center;
    background-color: black;
}

.card-2,
.card-3,
.card-4,
#card-5 {
    width: 45%;
    height: 220px;
    background-size: cover;
    background-position: center;
    text-align: left;
    color: #dfb87b;
    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
}


.card-2 {
    background-image: 
    linear-gradient(to bottom, rgba(245, 246, 252, 0.792), rgba(0, 0, 0, 0.73)),
    url("./images/Week-01-challenge.jpg");
}

.card-3 {
    background-image: 
    linear-gradient(to bottom, rgba(245, 246, 252, 0.792), rgba(0, 0, 0, 0.73)),
    url("./images/prework.jpg");
}

.card-4 {
    background-image: 
    linear-gradient(to bottom, rgba(245, 246, 252, 0.792), rgba(0, 0, 0, 0.73)),
    url("./images/recipes.jpg");
}

#card-5 {
    background-image: 
    linear-gradient(to bottom, rgba(245, 246, 252, 0.792), rgba(0, 0, 0, 0.73)),
    url("./images/pexels-anna-tarazevich-5598289.jpg");
}

footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}

#contact {
    display: flex;
}

.footer-links {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 250px;
}

.icon {
    position: relative;
    top: 9px;
    left: 5px;
    padding-right: 5px;
  }

.footer-links a {
    color:black;
    font-weight: bold;
}

  .footer-links a:hover {
    color:#b9b7b6;
}

  .quote {
    font-size: 16px;
    padding-right: 20px;
  }

.copyright {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.731);
    color: var(--lightcolor);
    padding: 20px 0px;
    margin-top: 60px;
}

/* Tablets */
@media screen and (max-width: 992px) {
    .portfolio {
        font-size: 60px;
    }
    #bio {
        flex-direction: column;
    }
    .profile-photo {
        margin-left: auto;
        margin-right: auto;
    }
    hr {
        width: 400px;
    }
  }

 /* Large smartphones */
 @media screen and (max-width: 768px) {
    main {
        margin: 0px;
    }
    nav {
        flex-direction: column;
        align-items: center;
        padding: 20px;
    }
    .navigation {
        padding-left: 0px;
    }
    main {
        margin: 0px;
    }      
    .portfolio {
        font-size: 32px;
    }
    #bio {
        flex-direction: column;
    }
    .profile-photo {
        margin-left: auto;
        margin-right: auto;
    }
    hr {
        width: 300px;
    }
    #work p {
        width: 50%;
        height: 20%;
    }    
    #contact {
        flex-direction: column;
        align-items: center;
    }    
    .icons {
        padding: 0px 20px;
    }
    .quote {
        flex-direction: column;
        align-items: center;
    }
  }

   /* Small smartphones */
   @media screen and (max-width: 576px) {
    main {
        margin: 0px;
    }
    nav {
        flex-direction: column;
        align-items: center;
        padding: 10px;
    }
    .navigation {
        padding-left: 0px;
    }  
    main {
        margin: 0px;
    }  
    .portfolio {
        font-size: 24px;
    }
    #bio {
        flex-direction: column;
    }
    .profile-photo {
        margin-left: auto;
        margin-right: auto;
    }
    hr {
        width: 300px;
    }
    #work p {
        width: 50%;
        height: 20%;
    }
    #contact {
        flex-direction: column;
        align-items: center;
    }    
    .icons {
        padding: 0px 20px;
    }
    .quote {
        flex-direction: column;
        align-items: center;
    }
}

